force-app/main/default/objects/cgcloud__Order_Item_Rule__c/cgcloud__Order_Item_Rule__c.object-meta.xml
<CustomObject>
    <description>the order item rule object is used for defining the rules handled in-between the pricing engine during the complex pricing calculation.</description>
    <label>Order Item Rule</label>
    <nameField>
        <displayFormat>OIR-{000000}</displayFormat>
        <label>Order Item Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Item Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>