force-app/main/default/objects/cgcloud__Order_Item_Rule__c/fields/cgcloud__Effect__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Effect__c</fullName>
    <description>Defines how the order item template effects the reference value determination.</description>
    <label>Effect</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>n</fullName>
            </value>
            <value>
                <fullName>+</fullName>
            </value>
            <value>
                <fullName>-</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>