force-app/main/default/objects/cgcloud__Order_Item_Rule__c/fields/cgcloud__Item_Meta_Rule__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Item_Meta_Rule__c</fullName>
    <description>Specifies how the rules applies to the order item template.</description>
    <label>Item Meta Rule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>According to Price Effect</fullName>
            </value>
            <value>
                <fullName>All Items (Total)</fullName>
            </value>
            <value>
                <fullName>Delivery (excl. Free Item)</fullName>
            </value>
            <value>
                <fullName>Delivery (incl. Free Item)</fullName>
            </value>
            <value>
                <fullName>Returns Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>