force-app/main/default/objects/cgcloud__Order_Item_Rule__c/fields/cgcloud__Order_Item_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Order_Item_Template__c</fullName>
    <description>Reference to the order item template object.</description>
    <label>Order Item Template</label>
    <referenceTo>cgcloud__Order_Item_Template__c</referenceTo>
    <relationshipLabel>Order Item Rules</relationshipLabel>
    <relationshipName>Order_Item_Rules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>